--- a/tictok.html
+++ b/tictok.html
@@ -437,8 +437,8 @@
         </section>
 
         <footer>
-            <p>网页由问小白生成，仅供参考</p>
-            <p>wenxiaobai.com | 更新日期：2024年1月</p>
+            <p>作者 kai_57_sh</p>
+            <p>kai_57_sh.com | 更新日期：2025年3月30日</p>
         </footer>
     </div>
 
